--- a/luckyforlife.us/how-to-play/index.html
+++ b/luckyforlife.us/how-to-play/index.html
@@ -151,7 +151,10 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl08', 'ctl01', [], [], [], 
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../where-to-play/index.html">Where To Play</a>
+                                    <a class="nav-link" href="../winners/index.html">Winners Archive</a>
+
+
+                                                
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="../winning-numbers/index.html">Winning Numbers</a>
