--- a/luckyforlife.us/index.html
+++ b/luckyforlife.us/index.html
@@ -155,7 +155,8 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl08', 'ctl01', [], [], [], 
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="where-to-play/index.html">Where To Play</a>
+        
+                                                    <a class="nav-link" href="winners/index.html">Winners Archive</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="winning-numbers/index.html">Winning Numbers</a>
@@ -251,7 +252,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl08', 'ctl01', [], [], [], 
                 </div>
                 <div id="copyright2" class="col-12 col-lg-6 col-xl-7" style="margin-top: 8.5px;">
                     <a href="how-to-play/index.html">How To Play</a><span class="br d-inline-block"></span>
-                    <a href="where-to-play/index.html">Where To Play</a><span class="br d-inline-block"></span>
+                    <a href="./winners/index.html">Winners Archive</a><span class="br d-inline-block"></span>
                     <a href="winning-numbers/index.html">Winning&nbsp;Numbers</a><span class="br d-none d-xl-inline-block"></span><span class="d-xl-none"><br /></span>
                     <a href="about/index.html">About</a><span class="br d-inline-block"></span>
                     <a href="contact/index.html">Contact</a><span class="br d-inline-block"></span>
