--- a/luckyforlife.us/winners/index.html
+++ b/luckyforlife.us/winners/index.html
@@ -108,7 +108,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl08', 'ctl01', [], [], [], 
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../where-to-play/index.html">Where To Play</a>
+                                                    <a class="nav-link" href="#">Winners Archive</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="../winning-numbers/index.html">Winning Numbers</a>
