--- a/luckyforlife.us/winning-numbers/index.html
+++ b/luckyforlife.us/winning-numbers/index.html
@@ -108,7 +108,8 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl08', 'ctl01', [], [], [], 
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../where-to-play/index.html">Where To Play</a>
+                                    <a class="nav-link" href="../winners/index.html">Winners Archive</a>
+
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="index.html">Winning Numbers</a>
